# extension-agent

./: .gitignore  README.md
.claude/: settings.json
.claude/rules/: guidelines.md  principle.md
.claude/skills/workflow/: SKILL.md
_docs/: TODO.md  architecture.md  overview.md  phase0-grounding.md
backend/: .env.example  agent.py  audit.py  documents.py  live_check.py  main.py  memory_agent.py  memory_store.py  pyproject.toml  run.sh  safety.py  session.py  vault.py
backend/tests/: test_documents.py  test_learning.py  test_lessons.py  test_loop.py  test_maturity.py  test_safety.py  test_vault.py
extension/: background.js  content.js  main_hook.js  manifest.json  sidepanel.html  sidepanel.js
spike/phase0/: GUIDE.md  bookmarklet.txt  build-bookmarklet.mjs  indexer.js  install.html  measure.js  oracle.js  smoke-test.mjs
