[project]
name = "backend"
version = "0.1.0"
description = "AI 신입사원 백엔드 (FastAPI + Pydantic AI)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "pydantic-ai-slim[anthropic,openai]>=1.107.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
