[project]
name = "backend"
version = "0.1.0"
description = "AI 신입사원 백엔드 (FastAPI + Pydantic AI)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "pydantic-ai-slim[anthropic,openai]>=1.107.0",
    "uvicorn[standard]>=0.49.0",
    "pyyaml>=6.0",
    "cryptography>=43",
    "pymupdf>=1.24",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

# 테스트끼리 헬퍼를 공유한다(예: test_safety가 test_loop의 drive/ok_obs를 import).
# pytest는 tests/를 자동으로 경로에 넣지만 정적 타입체커는 모르므로 명시해 준다(런타임 영향 없음).
[tool.ty.environment]
extra-paths = ["tests"]

[tool.pyright]
extraPaths = ["tests"]
